<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- main activity text -->
    <string name="my_nanodegree_apps">My Nano Degree Apps!</string>
    <string name="button_capstone">Capstone : My Own App</string>
    <string name="button_xyz_reader">Xyz Reader</string>
    <string name="button_build_it_bigger">Build It Bigger</string>
    <string name="button_library_app">Library App</string>
    <string name="button_score_app">Scores App</string>
    <string name="button_spotify_streamer">Spotify Streamer</string>
    <string name="toast_prefix">"This button will launch "</string>
</resources>
