<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/myapp_textview_bottom_margin"
        android:text="@string/my_nanodegree_apps" />

    <Button
        android:id="@+id/button_spotify"
        style="@style/protfolioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="spotifyClick"
        android:text="@string/button_spotify_streamer" />

    <Button
        android:id="@+id/button_scores_app"
        style="@style/protfolioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="spotifyClick"
        android:text="@string/button_score_app" />

    <Button
        android:id="@+id/button_library_app"
        style="@style/protfolioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="spotifyClick"
        android:text="@string/button_library_app" />

    <Button
        android:id="@+id/button_build_it_bigger"
        style="@style/protfolioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="spotifyClick"
        android:text="@string/button_build_it_bigger" />

    <Button
        android:id="@+id/button_xyz_reader"
        style="@style/protfolioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="spotifyClick"
        android:text="@string/button_xyz_reader" />

    <Button
        android:id="@+id/button_capstone"
        style="@style/capstoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="spotifyClick"
        android:text="@string/button_capstone" />


</LinearLayout>
